# embermug-tray

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  default.nix  flake.nix
.claude/skills/ember-mug-ble-protocol/: SKILL.md  characteristics.md  data-formats.md  push-events.md
app/: CMakeLists.txt
app/resources/: resources.qrc
app/src/: connectionmanager.cpp  connectionmanager.h  devicemonitor.cpp  devicemonitor.h  main.cpp  traycontroller.cpp  traycontroller.h
lib/: CMakeLists.txt
lib/include/ember/: ember.h  mug.h  types.h
lib/src/: constants.h  mug.cpp  protocol.cpp  protocol.h  service.cpp  service.h
nix/: default.nix  hm-module.nix
tests/: .clang-tidy  CMakeLists.txt  test_mug.cpp  test_protocol.cpp  test_types.cpp
